Fix: Fix text overflow on smaller screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -159,6 +159,6 @@ table{
     }
 
     table.responsive-table tbody tr {
-        width: 33%;
+        min-width: 33%;
     }
 }
